--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="brunoszczuk.com.br.apptrab2bim">
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.INTERNET_ADMIN"/>
+    <uses-permission android:name="android.permission.INTERNET_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -35,8 +36,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".EquipeActivity"
+            android:name=".EquipesActivity"
             android:label="@string/title_activity_equipe"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Time"
+            android:label="@string/title_activity_time"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
